# boopa

./: .gitignore  Cargo.toml  README.ja.md  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/boopa/: Cargo.toml
crates/boopa/src/: app_state.rs  autoinstall.rs  config.rs  lib.rs  main.rs
crates/boopa/src/boot_assets/: mod.rs
crates/boopa/src/dhcp/: mod.rs
crates/boopa/src/http/: mod.rs
crates/boopa/src/http/routes/: autoinstall.rs  cache.rs  dhcp.rs  distros.rs  health.rs  mod.rs
crates/boopa/src/persistence/: mod.rs
crates/boopa/src/tftp/: mod.rs
crates/boopa/tests/: api.rs  dhcp_runtime.rs  http_boot.rs  tftp_boot.rs  ubuntu_uefi_static_boot.rs
crates/boot-recipe/: Cargo.toml
crates/boot-recipe/src/: lib.rs
crates/boot-recipe/tests/: recipes.rs
crates/image-cache/: Cargo.toml
crates/image-cache/src/: lib.rs
crates/image-cache/tests/: cache.rs  refresh.rs
crates/network-bootd/src/: app_state.rs  config.rs  lib.rs
crates/network-bootd/src/boot_assets/: mod.rs
crates/network-bootd/src/http/: mod.rs
crates/network-bootd/src/http/routes/: cache.rs  distros.rs  health.rs  selection.rs
crates/network-bootd/src/persistence/: mod.rs
crates/network-bootd/src/tftp/: mod.rs
crates/network-bootd/tests/: api.rs  http_boot.rs  tftp_boot.rs  ubuntu_uefi_static_boot.rs
crates/ubuntu-autoinstall/: Cargo.toml
crates/ubuntu-autoinstall/src/: lib.rs
crates/ubuntu-custom-image/: Cargo.toml
crates/ubuntu-custom-image/examples/: ubuntu-custom-image.yaml
crates/ubuntu-custom-image/examples/files/: motd.txt
crates/ubuntu-custom-image/src/: cache.rs  lib.rs  main.rs  manifest.rs  pipeline.rs  source.rs  tools.rs
crates/ubuntu-custom-image/tests/: build.rs  manifest.rs  source.rs  tools.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  vite.config.ts
frontend/e2e/: autoinstall-persistence.spec.ts  dashboard-initial-render.spec.ts
frontend/scripts/: e2e-config.d.mts  e2e-config.d.ts  e2e-config.mjs  run-boopa-e2e-backend.mjs  run-vite-e2e.mjs
frontend/src/: main.tsx
frontend/src/app/: AppProviders.tsx  store.ts
frontend/src/components/: AutoinstallCard.tsx  CacheStatusCard.tsx  DhcpGuideCard.tsx  DistroSelector.tsx
frontend/src/pages/: DashboardPage.test.tsx  DashboardPage.tsx
frontend/src/services/: api.test.ts  api.ts
frontend/src/styles/: app.css
frontend/src/theme/: boopaTheme.ts
openspec/changes/archive/2026-04-08-add-dhcp-server-runtime/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-08-add-dhcp-server-runtime/specs/dhcp-server-runtime/: spec.md
openspec/changes/archive/2026-04-08-dhcp-guest-path-e2e/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-08-dhcp-guest-path-e2e/specs/dhcp-server-runtime/: spec.md
openspec/changes/fedora-uefi-smoke-harness/: design.md  proposal.md  tasks.md
openspec/changes/fedora-uefi-smoke-harness/specs/dhcp-server-runtime/: spec.md
openspec/changes/fedora-uefi-smoke-harness/specs/smoke-harness-distro-generic/: spec.md
openspec/specs/dhcp-server-runtime/: spec.md
scripts/: __init__.py
scripts/smoke/: __init__.py  boot-arch-bios.sh  boot-arch-uefi.sh  boot-fedora-bios.sh  boot-fedora-uefi.sh  boot-ubuntu-bios.sh  boot-ubuntu-custom-image.sh  boot-ubuntu-uefi.sh  boot_modes.py  cli.py  common.sh  dhcp-relay.py  executor.py  lanes.py  lib.sh  models.py  networks.py  plan_render.py  planner.py  support_matrix.py  targets.py  test-harness.sh  test_harness.py  vde_host_helper.py
scripts/smoke/assets/ubuntu-uefi/: grubx64.efi
