[package]
name = "boopa"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
boot-recipe = { path = "../boot-recipe" }
image-cache = { path = "../image-cache" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
