[package]
name = "image-cache"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
boot-recipe.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
